producto/paquete_fundacional/v0.1/INVENTARIO.md
# Inventario de la distribución

Conjunto fundacional 0.1 · 11 de septiembre de 2026

La distribución contiene 114 archivos: los enumerados aquí y la entrada INICIO.md situada en la raíz del ZIP. El manifiesto incluye la huella de todos salvo la suya propia. Este índice es un derivado de rutas y funciones; no es un maestro ni un resultado de aplicación.

Las versiones base se fijan con la revisión de integración del conjunto 0.1. El manifiesto distingue el contenido exacto tras las correcciones editoriales. Las vistas derivadas y herramientas están identificadas como tales.

## Arquitectura

| Archivo | Función | Versión base |
|---|---|---|
| [producto/arquitectura/v0.2/01_arquitectura_metodologica.md](../../arquitectura/v0.2/01_arquitectura_metodologica.md) | Instrucción o especificación metodológica | 0.2 |
| [producto/arquitectura/v0.2/02_informacion_y_contratos.md](../../arquitectura/v0.2/02_informacion_y_contratos.md) | Instrucción o especificación metodológica | 0.2 |
| [producto/arquitectura/v0.2/03_nodos_y_entregables.md](../../arquitectura/v0.2/03_nodos_y_entregables.md) | Instrucción o especificación metodológica | 0.2 |
| [producto/arquitectura/v0.2/04_dependencias_y_gobernanza.md](../../arquitectura/v0.2/04_dependencias_y_gobernanza.md) | Instrucción o especificación metodológica | 0.2 |
| [producto/arquitectura/v0.2/05_reutilizacion_y_fuentes.md](../../arquitectura/v0.2/05_reutilizacion_y_fuentes.md) | Procedencia de diseño | 0.2 |
| [producto/arquitectura/v0.2/06_construccion_y_revision.md](../../arquitectura/v0.2/06_construccion_y_revision.md) | Instrucción o especificación metodológica | 0.2 |
| [producto/arquitectura/v0.2/Go2Rev_arquitectura_metodologica_v0.2.docx](../../arquitectura/v0.2/Go2Rev_arquitectura_metodologica_v0.2.docx) | Vista de lectura derivada | 0.2 |

## Encargo y conocimiento

| Archivo | Función | Versión base |
|---|---|---|
| [producto/metodo/encargo_y_conocimiento/v0.1/01_encargo_y_salida.md](../../metodo/encargo_y_conocimiento/v0.1/01_encargo_y_salida.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/encargo_y_conocimiento/v0.1/02_conocimiento_y_solicitud.md](../../metodo/encargo_y_conocimiento/v0.1/02_conocimiento_y_solicitud.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/encargo_y_conocimiento/v0.1/03_contratos_y_diccionario.md](../../metodo/encargo_y_conocimiento/v0.1/03_contratos_y_diccionario.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/encargo_y_conocimiento/v0.1/04_fuentes_y_correspondencia.md](../../metodo/encargo_y_conocimiento/v0.1/04_fuentes_y_correspondencia.md) | Procedencia de diseño | 0.1 |
| [producto/metodo/encargo_y_conocimiento/v0.1/LEEME.md](../../metodo/encargo_y_conocimiento/v0.1/LEEME.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/encargo_y_conocimiento/v0.1/plantillas/01_encargo.md](../../metodo/encargo_y_conocimiento/v0.1/plantillas/01_encargo.md) | Plantilla vacía | 0.1 |
| [producto/metodo/encargo_y_conocimiento/v0.1/plantillas/02_solicitudes.md](../../metodo/encargo_y_conocimiento/v0.1/plantillas/02_solicitudes.md) | Plantilla vacía | 0.1 |
| [producto/metodo/encargo_y_conocimiento/v0.1/plantillas/03_conocimiento.md](../../metodo/encargo_y_conocimiento/v0.1/plantillas/03_conocimiento.md) | Plantilla vacía | 0.1 |
| [producto/metodo/encargo_y_conocimiento/v0.1/plantillas/04_transferencia_A.md](../../metodo/encargo_y_conocimiento/v0.1/plantillas/04_transferencia_A.md) | Plantilla vacía | 0.1 |
| [producto/metodo/encargo_y_conocimiento/v0.1/plantillas/05_capacidades_B.md](../../metodo/encargo_y_conocimiento/v0.1/plantillas/05_capacidades_B.md) | Plantilla vacía | 0.1 |
| [producto/metodo/encargo_y_conocimiento/v0.1/plantillas/06_decisiones_y_cambios.md](../../metodo/encargo_y_conocimiento/v0.1/plantillas/06_decisiones_y_cambios.md) | Plantilla vacía | 0.1 |

## Investigación y Diagnostic

| Archivo | Función | Versión base |
|---|---|---|
| [producto/metodo/investigacion_y_diagnostic/v0.2/01_investigacion_y_suficiencia.md](../../metodo/investigacion_y_diagnostic/v0.2/01_investigacion_y_suficiencia.md) | Instrucción o especificación metodológica | 0.2 |
| [producto/metodo/investigacion_y_diagnostic/v0.2/02_mercado_y_acceso.md](../../metodo/investigacion_y_diagnostic/v0.2/02_mercado_y_acceso.md) | Instrucción o especificación metodológica | 0.2 |
| [producto/metodo/investigacion_y_diagnostic/v0.2/03_comprador_y_compra.md](../../metodo/investigacion_y_diagnostic/v0.2/03_comprador_y_compra.md) | Instrucción o especificación metodológica | 0.2 |
| [producto/metodo/investigacion_y_diagnostic/v0.2/04_alternativas_y_diferenciacion.md](../../metodo/investigacion_y_diagnostic/v0.2/04_alternativas_y_diferenciacion.md) | Instrucción o especificación metodológica | 0.2 |
| [producto/metodo/investigacion_y_diagnostic/v0.2/05_recomendacion_diagnostic.md](../../metodo/investigacion_y_diagnostic/v0.2/05_recomendacion_diagnostic.md) | Instrucción o especificación metodológica | 0.2 |
| [producto/metodo/investigacion_y_diagnostic/v0.2/06_contratos_y_economia_exploratoria.md](../../metodo/investigacion_y_diagnostic/v0.2/06_contratos_y_economia_exploratoria.md) | Instrucción o especificación metodológica | 0.2 |
| [producto/metodo/investigacion_y_diagnostic/v0.2/07_fuentes_y_correspondencia.md](../../metodo/investigacion_y_diagnostic/v0.2/07_fuentes_y_correspondencia.md) | Procedencia de diseño | 0.2 |
| [producto/metodo/investigacion_y_diagnostic/v0.2/08_investigacion_externa_y_contraste.md](../../metodo/investigacion_y_diagnostic/v0.2/08_investigacion_externa_y_contraste.md) | Instrucción o especificación metodológica | 0.2 |
| [producto/metodo/investigacion_y_diagnostic/v0.2/09_rutina_de_fuentes_y_acceso.md](../../metodo/investigacion_y_diagnostic/v0.2/09_rutina_de_fuentes_y_acceso.md) | Procedencia de diseño | 0.2 |
| [producto/metodo/investigacion_y_diagnostic/v0.2/LEEME.md](../../metodo/investigacion_y_diagnostic/v0.2/LEEME.md) | Instrucción o especificación metodológica | 0.2 |
| [producto/metodo/investigacion_y_diagnostic/v0.2/plantillas/01_preguntas_y_cobertura.md](../../metodo/investigacion_y_diagnostic/v0.2/plantillas/01_preguntas_y_cobertura.md) | Plantilla vacía | 0.2 |
| [producto/metodo/investigacion_y_diagnostic/v0.2/plantillas/02_mercado_y_acceso.md](../../metodo/investigacion_y_diagnostic/v0.2/plantillas/02_mercado_y_acceso.md) | Plantilla vacía | 0.2 |
| [producto/metodo/investigacion_y_diagnostic/v0.2/plantillas/03_comprador_y_compra.md](../../metodo/investigacion_y_diagnostic/v0.2/plantillas/03_comprador_y_compra.md) | Plantilla vacía | 0.2 |
| [producto/metodo/investigacion_y_diagnostic/v0.2/plantillas/04_alternativas_y_diferenciacion.md](../../metodo/investigacion_y_diagnostic/v0.2/plantillas/04_alternativas_y_diferenciacion.md) | Plantilla vacía | 0.2 |
| [producto/metodo/investigacion_y_diagnostic/v0.2/plantillas/05_recomendacion_diagnostic.md](../../metodo/investigacion_y_diagnostic/v0.2/plantillas/05_recomendacion_diagnostic.md) | Plantilla vacía | 0.2 |
| [producto/metodo/investigacion_y_diagnostic/v0.2/plantillas/06_intercambio_exploratorio.md](../../metodo/investigacion_y_diagnostic/v0.2/plantillas/06_intercambio_exploratorio.md) | Plantilla vacía | 0.2 |
| [producto/metodo/investigacion_y_diagnostic/v0.2/plantillas/07_contraste_externo_interno.md](../../metodo/investigacion_y_diagnostic/v0.2/plantillas/07_contraste_externo_interno.md) | Plantilla vacía | 0.2 |

## Oferta entrega y economía

| Archivo | Función | Versión base |
|---|---|---|
| [producto/metodo/oferta_entrega_y_economia/v0.1/01_oferta_y_precio.md](../../metodo/oferta_entrega_y_economia/v0.1/01_oferta_y_precio.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/oferta_entrega_y_economia/v0.1/02_entrega_y_cobro.md](../../metodo/oferta_entrega_y_economia/v0.1/02_entrega_y_cobro.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/oferta_entrega_y_economia/v0.1/03_economia_y_capacidad.md](../../metodo/oferta_entrega_y_economia/v0.1/03_economia_y_capacidad.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/oferta_entrega_y_economia/v0.1/04_formulas_y_dominio.md](../../metodo/oferta_entrega_y_economia/v0.1/04_formulas_y_dominio.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/oferta_entrega_y_economia/v0.1/05_variantes_de_oferta_y_operacion.md](../../metodo/oferta_entrega_y_economia/v0.1/05_variantes_de_oferta_y_operacion.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/oferta_entrega_y_economia/v0.1/06_comparacion_y_umbrales.md](../../metodo/oferta_entrega_y_economia/v0.1/06_comparacion_y_umbrales.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/oferta_entrega_y_economia/v0.1/07_contratos_y_revision.md](../../metodo/oferta_entrega_y_economia/v0.1/07_contratos_y_revision.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/oferta_entrega_y_economia/v0.1/08_guia_del_modelo.md](../../metodo/oferta_entrega_y_economia/v0.1/08_guia_del_modelo.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/oferta_entrega_y_economia/v0.1/09_fuentes_y_correspondencia.md](../../metodo/oferta_entrega_y_economia/v0.1/09_fuentes_y_correspondencia.md) | Procedencia de diseño | 0.1 |
| [producto/metodo/oferta_entrega_y_economia/v0.1/LEEME.md](../../metodo/oferta_entrega_y_economia/v0.1/LEEME.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/oferta_entrega_y_economia/v0.1/modelo/Go2Rev_modelo_economico_v0.1.xlsx](../../metodo/oferta_entrega_y_economia/v0.1/modelo/Go2Rev_modelo_economico_v0.1.xlsx) | Modelo editable vacío | 0.1 |
| [producto/metodo/oferta_entrega_y_economia/v0.1/modelo/definicion_modelo.mjs](../../metodo/oferta_entrega_y_economia/v0.1/modelo/definicion_modelo.mjs) | Definición editable del modelo | 0.1 |
| [producto/metodo/oferta_entrega_y_economia/v0.1/plantillas/01_oferta.md](../../metodo/oferta_entrega_y_economia/v0.1/plantillas/01_oferta.md) | Plantilla vacía | 0.1 |
| [producto/metodo/oferta_entrega_y_economia/v0.1/plantillas/02_entrega_y_traspaso.md](../../metodo/oferta_entrega_y_economia/v0.1/plantillas/02_entrega_y_traspaso.md) | Plantilla vacía | 0.1 |
| [producto/metodo/oferta_entrega_y_economia/v0.1/plantillas/03_partidas_y_recursos.md](../../metodo/oferta_entrega_y_economia/v0.1/plantillas/03_partidas_y_recursos.md) | Plantilla vacía | 0.1 |
| [producto/metodo/oferta_entrega_y_economia/v0.1/plantillas/04_eventos_de_caja.md](../../metodo/oferta_entrega_y_economia/v0.1/plantillas/04_eventos_de_caja.md) | Plantilla vacía | 0.1 |
| [producto/metodo/oferta_entrega_y_economia/v0.1/plantillas/05_modelo_y_conclusion.md](../../metodo/oferta_entrega_y_economia/v0.1/plantillas/05_modelo_y_conclusion.md) | Plantilla vacía | 0.1 |
| [producto/metodo/oferta_entrega_y_economia/v0.1/plantillas/06_comparacion.md](../../metodo/oferta_entrega_y_economia/v0.1/plantillas/06_comparacion.md) | Plantilla vacía | 0.1 |

## Posicionamiento demanda y conversión

| Archivo | Función | Versión base |
|---|---|---|
| [producto/metodo/posicionamiento_demanda_y_conversion/v0.1/01_posicionamiento_y_promesas.md](../../metodo/posicionamiento_demanda_y_conversion/v0.1/01_posicionamiento_y_promesas.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/posicionamiento_demanda_y_conversion/v0.1/02_acceso_y_demanda.md](../../metodo/posicionamiento_demanda_y_conversion/v0.1/02_acceso_y_demanda.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/posicionamiento_demanda_y_conversion/v0.1/03_conversion_y_compra.md](../../metodo/posicionamiento_demanda_y_conversion/v0.1/03_conversion_y_compra.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/posicionamiento_demanda_y_conversion/v0.1/04_costes_cohortes_y_capacidad.md](../../metodo/posicionamiento_demanda_y_conversion/v0.1/04_costes_cohortes_y_capacidad.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/posicionamiento_demanda_y_conversion/v0.1/05_variantes_y_traspasos.md](../../metodo/posicionamiento_demanda_y_conversion/v0.1/05_variantes_y_traspasos.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/posicionamiento_demanda_y_conversion/v0.1/06_contratos_y_revision.md](../../metodo/posicionamiento_demanda_y_conversion/v0.1/06_contratos_y_revision.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/posicionamiento_demanda_y_conversion/v0.1/07_fuentes_y_correspondencia.md](../../metodo/posicionamiento_demanda_y_conversion/v0.1/07_fuentes_y_correspondencia.md) | Procedencia de diseño | 0.1 |
| [producto/metodo/posicionamiento_demanda_y_conversion/v0.1/LEEME.md](../../metodo/posicionamiento_demanda_y_conversion/v0.1/LEEME.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/posicionamiento_demanda_y_conversion/v0.1/plantillas/01_posicionamiento.md](../../metodo/posicionamiento_demanda_y_conversion/v0.1/plantillas/01_posicionamiento.md) | Plantilla vacía | 0.1 |
| [producto/metodo/posicionamiento_demanda_y_conversion/v0.1/plantillas/02_mensaje_y_fundamento.md](../../metodo/posicionamiento_demanda_y_conversion/v0.1/plantillas/02_mensaje_y_fundamento.md) | Plantilla vacía | 0.1 |
| [producto/metodo/posicionamiento_demanda_y_conversion/v0.1/plantillas/03_ruta_de_demanda.md](../../metodo/posicionamiento_demanda_y_conversion/v0.1/plantillas/03_ruta_de_demanda.md) | Plantilla vacía | 0.1 |
| [producto/metodo/posicionamiento_demanda_y_conversion/v0.1/plantillas/04_recorrido_y_transicion.md](../../metodo/posicionamiento_demanda_y_conversion/v0.1/plantillas/04_recorrido_y_transicion.md) | Plantilla vacía | 0.1 |
| [producto/metodo/posicionamiento_demanda_y_conversion/v0.1/plantillas/05_actividad_coste_y_cohorte.md](../../metodo/posicionamiento_demanda_y_conversion/v0.1/plantillas/05_actividad_coste_y_cohorte.md) | Plantilla vacía | 0.1 |
| [producto/metodo/posicionamiento_demanda_y_conversion/v0.1/plantillas/06_recepcion_y_seguimiento.md](../../metodo/posicionamiento_demanda_y_conversion/v0.1/plantillas/06_recepcion_y_seguimiento.md) | Plantilla vacía | 0.1 |

## Medición preparación y transferencia

| Archivo | Función | Versión base |
|---|---|---|
| [producto/metodo/medicion_preparacion_y_transferencia/v0.1/01_medicion_y_revision.md](../../metodo/medicion_preparacion_y_transferencia/v0.1/01_medicion_y_revision.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/medicion_preparacion_y_transferencia/v0.1/02_preparacion_y_secuencia.md](../../metodo/medicion_preparacion_y_transferencia/v0.1/02_preparacion_y_secuencia.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/medicion_preparacion_y_transferencia/v0.1/03_protocolos_de_evidencia.md](../../metodo/medicion_preparacion_y_transferencia/v0.1/03_protocolos_de_evidencia.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/medicion_preparacion_y_transferencia/v0.1/04_materializacion_y_uso.md](../../metodo/medicion_preparacion_y_transferencia/v0.1/04_materializacion_y_uso.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/medicion_preparacion_y_transferencia/v0.1/05_comprobacion_de_preparacion.md](../../metodo/medicion_preparacion_y_transferencia/v0.1/05_comprobacion_de_preparacion.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/medicion_preparacion_y_transferencia/v0.1/06_transferencia_y_cierre.md](../../metodo/medicion_preparacion_y_transferencia/v0.1/06_transferencia_y_cierre.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/medicion_preparacion_y_transferencia/v0.1/07_contratos_y_revision.md](../../metodo/medicion_preparacion_y_transferencia/v0.1/07_contratos_y_revision.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/medicion_preparacion_y_transferencia/v0.1/08_fuentes_y_correspondencia.md](../../metodo/medicion_preparacion_y_transferencia/v0.1/08_fuentes_y_correspondencia.md) | Procedencia de diseño | 0.1 |
| [producto/metodo/medicion_preparacion_y_transferencia/v0.1/LEEME.md](../../metodo/medicion_preparacion_y_transferencia/v0.1/LEEME.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/medicion_preparacion_y_transferencia/v0.1/plantillas/01_evento_y_medida.md](../../metodo/medicion_preparacion_y_transferencia/v0.1/plantillas/01_evento_y_medida.md) | Plantilla vacía | 0.1 |
| [producto/metodo/medicion_preparacion_y_transferencia/v0.1/plantillas/02_revision_y_decision.md](../../metodo/medicion_preparacion_y_transferencia/v0.1/plantillas/02_revision_y_decision.md) | Plantilla vacía | 0.1 |
| [producto/metodo/medicion_preparacion_y_transferencia/v0.1/plantillas/03_preparacion_y_secuencia.md](../../metodo/medicion_preparacion_y_transferencia/v0.1/plantillas/03_preparacion_y_secuencia.md) | Plantilla vacía | 0.1 |
| [producto/metodo/medicion_preparacion_y_transferencia/v0.1/plantillas/04_protocolo_previo.md](../../metodo/medicion_preparacion_y_transferencia/v0.1/plantillas/04_protocolo_previo.md) | Plantilla vacía | 0.1 |
| [producto/metodo/medicion_preparacion_y_transferencia/v0.1/plantillas/05_pieza_y_configuracion.md](../../metodo/medicion_preparacion_y_transferencia/v0.1/plantillas/05_pieza_y_configuracion.md) | Plantilla vacía | 0.1 |
| [producto/metodo/medicion_preparacion_y_transferencia/v0.1/plantillas/06_observacion_y_correccion.md](../../metodo/medicion_preparacion_y_transferencia/v0.1/plantillas/06_observacion_y_correccion.md) | Plantilla vacía | 0.1 |
| [producto/metodo/medicion_preparacion_y_transferencia/v0.1/plantillas/07_cobertura_y_preparacion.md](../../metodo/medicion_preparacion_y_transferencia/v0.1/plantillas/07_cobertura_y_preparacion.md) | Plantilla vacía | 0.1 |
| [producto/metodo/medicion_preparacion_y_transferencia/v0.1/plantillas/08_transferencia_y_soporte.md](../../metodo/medicion_preparacion_y_transferencia/v0.1/plantillas/08_transferencia_y_soporte.md) | Plantilla vacía | 0.1 |

## Operación conversacional

| Archivo | Función | Versión base |
|---|---|---|
| [producto/metodo/operacion_conversacional/v0.1/01_guia_del_consultor.md](../../metodo/operacion_conversacional/v0.1/01_guia_del_consultor.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/operacion_conversacional/v0.1/02_rutas_y_lectura.md](../../metodo/operacion_conversacional/v0.1/02_rutas_y_lectura.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/operacion_conversacional/v0.1/03_capacidades_y_alternativas.md](../../metodo/operacion_conversacional/v0.1/03_capacidades_y_alternativas.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/operacion_conversacional/v0.1/04_adaptacion_del_entorno.md](../../metodo/operacion_conversacional/v0.1/04_adaptacion_del_entorno.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/operacion_conversacional/v0.1/05_continuidad_y_cambios.md](../../metodo/operacion_conversacional/v0.1/05_continuidad_y_cambios.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/operacion_conversacional/v0.1/06_contrato_y_revision.md](../../metodo/operacion_conversacional/v0.1/06_contrato_y_revision.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/operacion_conversacional/v0.1/07_fuentes_y_correspondencia.md](../../metodo/operacion_conversacional/v0.1/07_fuentes_y_correspondencia.md) | Procedencia de diseño | 0.1 |
| [producto/metodo/operacion_conversacional/v0.1/ENTRADA_GO2REV.md](../../metodo/operacion_conversacional/v0.1/ENTRADA_GO2REV.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/operacion_conversacional/v0.1/LEEME.md](../../metodo/operacion_conversacional/v0.1/LEEME.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/metodo/operacion_conversacional/v0.1/plantillas/01_capacidad_del_entorno.md](../../metodo/operacion_conversacional/v0.1/plantillas/01_capacidad_del_entorno.md) | Plantilla vacía | 0.1 |
| [producto/metodo/operacion_conversacional/v0.1/plantillas/02_continuidad_de_tarea.md](../../metodo/operacion_conversacional/v0.1/plantillas/02_continuidad_de_tarea.md) | Plantilla vacía | 0.1 |
| [producto/metodo/operacion_conversacional/v0.1/plantillas/03_traspaso_de_contexto.md](../../metodo/operacion_conversacional/v0.1/plantillas/03_traspaso_de_contexto.md) | Plantilla vacía | 0.1 |

## Paquete fundacional

| Archivo | Función | Versión base |
|---|---|---|
| [producto/paquete_fundacional/v0.1/01_guia_de_implementacion.md](01_guia_de_implementacion.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/paquete_fundacional/v0.1/02_alcance_y_variantes.md](02_alcance_y_variantes.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/paquete_fundacional/v0.1/03_entregables_y_recepcion.md](03_entregables_y_recepcion.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/paquete_fundacional/v0.1/04_cobertura_e_integracion.md](04_cobertura_e_integracion.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/paquete_fundacional/v0.1/05_versiones_y_mantenimiento.md](05_versiones_y_mantenimiento.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/paquete_fundacional/v0.1/Go2Rev_guia_de_implementacion_v0.1.docx](Go2Rev_guia_de_implementacion_v0.1.docx) | Vista de lectura derivada | 0.1 |
| [producto/paquete_fundacional/v0.1/INVENTARIO.md](INVENTARIO.md) | Índice derivado de archivos | 0.1 |
| [producto/paquete_fundacional/v0.1/LEEME.md](LEEME.md) | Instrucción o especificación metodológica | 0.1 |
| [producto/paquete_fundacional/v0.1/manifiesto.json](manifiesto.json) | Inventario de integridad | 0.1 |

## Herramientas documentales

| Archivo | Función | Versión base |
|---|---|---|
| [herramientas/documentos/LEEME.md](../../../herramientas/documentos/LEEME.md) | Herramienta documental opcional | conjunto 0.1 |
| [herramientas/documentos/construir_lectura.py](../../../herramientas/documentos/construir_lectura.py) | Herramienta documental opcional | conjunto 0.1 |
| [herramientas/documentos/renderizar_paginas.py](../../../herramientas/documentos/renderizar_paginas.py) | Herramienta documental opcional | conjunto 0.1 |
| [herramientas/documentos/renderizar_word.ps1](../../../herramientas/documentos/renderizar_word.ps1) | Herramienta documental opcional | conjunto 0.1 |
| [herramientas/modelo_economico/LEEME.md](../../../herramientas/modelo_economico/LEEME.md) | Herramienta documental opcional | conjunto 0.1 |
| [herramientas/modelo_economico/construir_modelo.mjs](../../../herramientas/modelo_economico/construir_modelo.mjs) | Herramienta documental opcional | conjunto 0.1 |
| [herramientas/paquete/LEEME.md](../../../herramientas/paquete/LEEME.md) | Herramienta documental opcional | conjunto 0.1 |
| [herramientas/paquete/construir_paquete.py](../../../herramientas/paquete/construir_paquete.py) | Herramienta documental opcional | conjunto 0.1 |
